--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/forms": "^0.5.10",
+    "framer-motion": "^12.5.0",
     "next": "15.2.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
