--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1"
   },
   "devDependencies": {
@@ -30,6 +32,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/redux-persist": "^4.0.0",
+    "@types/simple-peer": "^9.11.8",
+    "@types/socket.io-client": "^1.4.36",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
