--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/forms": "^0.5.10",
     "framer-motion": "^12.5.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.2.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.14",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
